overflow bug fixed

--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ table {
 
 body {
   font-family: "Lato", sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 html {
