--- a/scss/04-elements/_body.scss
+++ b/scss/04-elements/_body.scss
@@ -4,5 +4,6 @@
 body{
     // font-family: 'Courgette', cursive;
     font-family: 'Lato', sans-serif;
-    overflow: hidden;
+    overflow-x: hidden;
+    // height: 200vh;
 }
